The index.htm and style.css file is modified

--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>
-            My site
-        </title>
-    </head>
-    <body>
-        <h1> This is my GitHub Pages website </h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alelign Faris - Resume</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Alelign Faris</h1>
+        <p>Seattle, WA 98198 | (206)-849-3672 | aleligndf@gmail.com</p>
+        <nav>
+            <ul>
+                <li><a href="#summary">Summary</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">Work History</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="summary">
+            <h2>Professional Summary</h2>
+            <p>Detail-oriented team player with strong organizational skills...</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Machine Learning and Statistics</li>
+                <li>Python (Numpy, Pandas)</li>
+                <li>Data cleaning - ETL</li>
+                <li>Tableau and Power BI</li>
+                <li>Sentiment Analysis</li>
+                <li>Data Aggregation</li>
+                <li>Feature Engineering</li>
+                <li>SQL Databases</li>
+            </ul>
+        </section>
+
+        <section id="work">
+            <h2>Work History</h2>
+            <article>
+                <h3>Junior Level Data Scientist | Tata Consultancy Service</h3>
+                <p>Built a customer attrition random forest model...</p>
+            </article>
+            <article>
+                <h3>Entry Level Data Scientist | Infosys Technologies</h3>
+                <p>Designed and implemented over 5 machine-learning models...</p>
+            </article>
+            <article>
+                <h3>Data Analyst | Inkfarm.com, Seattle, WA</h3>
+                <p>Analyzed large datasets to identify trends and patterns in customer behaviors...</p>
+            </article>
+        </section>
+
+        <section id="education">
+            <h2>Education</h2>
+            <p>Master of Science, Computer Science, University of Illinois, Champaign, IL (Expected in 05/2024)</p>
+            <p>Bachelor of Science, Computer Science, University of Washington, Seattle, WA (06/2019)</p>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <article>
+                <h3>Predict Housing Price in Ames Using Python</h3>
+                <p>Objective: Predict housing price in log scale...</p>
+            </article>
+            <article>
+                <h3>Walmart Store Sales Forecasting</h3>
+                <p>Given historical sales data of 45 stores...</p>
+            </article>
+        </section>
+    </main>
+
+    <script src="index.js"></script>
+</body>
 </html>
