both html and css files are modified

--- a/index.html
+++ b/index.html
@@ -45,21 +45,50 @@
             <h2>Work History</h2>
             <article>
                 <h3>Junior Level Data Scientist | Tata Consultancy Service</h3>
-                <p>Built a customer attrition random forest model...</p>
+                <p>● Built a customer attrition random forest model that improved monthly retention by 12 basis
+                    points for clients likely to opt-out by providing relevant product features for them</p>
+                <p>● Received, cleaned, and prepped data from client using SQL, Pandas, open refine and Excel
+                    to help data scientists build marketing mix models</p>
+                <p>● Designed and implemented over 5 machine-learning models for different programs and
+                    projects</p>
+                <p>● Tackling data challenges encompassing tasks such as data cleaning, data generation,
+                    refining, visual representation, and crafting machine learning models.</p>
+                <p>● Utilized advanced querying, visualization and analytics tools to analyze and process complex
+                    data sets.</p>
+                <p>● Collaborated with a cross-functional team to develop pipelines, improving data processing
+                    efficiency</p>
+                <p>● Modeled predictions with feature selection algorithms.</p>
+
+
             </article>
             <article>
                 <h3>Entry Level Data Scientist | Infosys Technologies</h3>
-                <p>Designed and implemented over 5 machine-learning models...</p>
+                <p>● Building models to develop predictions about the future based on past data</p>
+                <p>● Used Python and SQL to clean and preprocess data, achieving a data quality improvement of
+                    18%.</p>
+                <p>● Aggregating and cleaning multiple data sources</p>
+                <p>● Building models to develop predictions about the future based on past data</p>
+                <p>● Compiled and cleaned ● data for proper handling.</p>
+                <p>● Analyzed large datasets to identify trends and patterns in customer behaviors.</p>
+                <p>● Enhancing code performance to achieve peak efficiency.</p>
+
+
             </article>
             <article>
                 <h3>Data Analyst | Inkfarm.com, Seattle, WA</h3>
-                <p>Analyzed large datasets to identify trends and patterns in customer behaviors...</p>
+                <p>● Created dashboards to monitor and track key performance indicators.</p>
+                <p>● Identified, analyzed and interpreted trends or patterns in complex data sets.</p>
+                <p>● Developed customized reports, summarizing and presenting data.</p>
+                <p>● Utilized data visualization techniques to present and explain complex data sets.</p>
+                <p>● Used statistical methods to analyze data and generate useful business reports.</p>
+
+
             </article>
         </section>
 
         <section id="education">
             <h2>Education</h2>
-            <p>Master of Science, Computer Science, University of Illinois, Champaign, IL (Expected in 05/2024)</p>
+            <p>Master of Science, Computer Science, University of Illinois, Champaign, IL (12/2023)</p>
             <p>Bachelor of Science, Computer Science, University of Washington, Seattle, WA (06/2019)</p>
         </section>
 
@@ -67,11 +96,16 @@
             <h2>Projects</h2>
             <article>
                 <h3>Predict Housing Price in Ames Using Python</h3>
-                <p>Objective: Predict housing price in log scale...</p>
+                <p>Objective: Predict housing price in log scale. Build two models: 1) Linear regression with Lasso
+                    or Ridge. 2) Tree models like random Forest or boosting tree. Utilize Lasso Regression and
+                    XGBoost algorithms. Assess model performance on diverse datasets for robust predictive
+                    capabilities. Outcome: Identify efficient preprocessing techniques and model configurations
+                    to enhance accuracy of real-world house price predictions.</p>
             </article>
             <article>
                 <h3>Walmart Store Sales Forecasting</h3>
-                <p>Given historical sales data of 45 stores...</p>
+                <p>Given historical sales data of 45 stores across different regions, the task is to predict the future
+                    weekly sales for every department in each store</p>
             </article>
         </section>
     </main>
